<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Funny Money</string>
    <string name="overview_activity_title">Übersicht</string>
    <string name="transaction_activity_title">Transaktionen</string>

    <!--Labels-->
    <string name="available_label">Verfügbar</string>
    <string name="fix_label">Fixe Ausgaben</string>
    <string name="variable_label">Variable Ausgaben</string>
    <string name="detail_label">Details</string>
    <string name="plot_label">Fancy plot</string>

    <string name="current_balance">Gesamt Kontostand: %1$s€</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthly_distribution">Monatliche Verteilung</string>

</resources>