<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/overview_activity_title"
            app:titleMarginTop="13dp"
            app:titleTextColor="@color/primary_text"
            app:layout_scrollFlags="scroll|enterAlways">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Overall amount-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_margin="8dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                android:id="@+id/available_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_label"
                android:layout_margin="@dimen/card_content_margin"/>

                <TextView
                    android:id="@+id/available_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="470€"
                    android:layout_margin="@dimen/card_content_margin"
                    android:textSize="45sp"
                    />

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="Gesamt Kontostand: 1110€"
                    android:layout_margin="@dimen/card_content_margin"/>

                <TextView
                    android:id="@+id/detail_button_overall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_content_margin"
                    android:padding="4dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/detail_label"
                    android:textColor="@color/primary"
                    android:onClick="goToTransactions"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--Fixed amount-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_fix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="@dimen/card_content_margin"
                android:elevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/fix_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fix_label"
                        android:layout_margin="@dimen/card_content_margin"/>

                    <TextView
                        android:id="@+id/fix_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="640€"
                        android:layout_margin="@dimen/card_content_margin"
                        android:textSize="45sp"
                        android:layout_gravity="end"/>

                    <TextView
                        android:id="@+id/detail_button_fix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_content_margin"
                        android:padding="4dp"
                        android:clickable="true"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/detail_label"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_variable"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="@dimen/card_content_margin"
                android:elevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/variable_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/variable_label"
                        android:layout_margin="@dimen/card_content_margin"/>

                    <TextView
                        android:id="@+id/variable_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/card_content_margin"
                        android:text="30€"
                        android:textSize="45sp"
                        android:textColor="@color/primary_dark"
                        />

                    <TextView
                        android:id="@+id/detail_button_variable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_content_margin"
                        android:padding="4dp"
                        android:clickable="true"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/detail_label"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>